<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Rexistro">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Rexistro">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/txtNome_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rexistro_txtNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <EditText
        android:id="@+id/editTxtNome_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome_Rexistro" />

    <TextView
        android:id="@+id/txtApelido1_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rexistro_txtApelido1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtNome_Rexistro" />

    <EditText
        android:id="@+id/editTxtApelido1_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApelido1_Rexistro" />

    <TextView
        android:id="@+id/txtViewApelido2_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rexistro_txtApelido2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtApelido1_Rexistro" />

    <EditText
        android:id="@+id/editTxtApelido2_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewApelido2_Rexistro" />

    <TextView
        android:id="@+id/txtViewEmail_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rexistro_txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtApelido2_Rexistro" />

    <EditText
        android:id="@+id/editTxtEmail_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewEmail_Rexistro" />

    <TextView
        android:id="@+id/txtViewAlcume_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rexistro_txtUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail_Rexistro" />

    <EditText
        android:id="@+id/editTxtAlcume_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewAlcume_Rexistro" />

    <TextView
        android:id="@+id/txtViewContrasinal_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rexistro_txtPwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtAlcume_Rexistro" />

    <EditText
        android:id="@+id/edittxtContrasinal_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewContrasinal_Rexistro" />

    <CheckBox
        android:id="@+id/chkAdmin_Rexistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rexistro_chkAdmin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxtContrasinal_Rexistro" />

    <Button
        android:id="@+id/btnGardar_Rexistro"
        android:layout_width="101dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/rexistro_btnGardar"
        app:layout_constraintStart_toEndOf="@+id/chkAdmin_Rexistro"
        app:layout_constraintTop_toBottomOf="@+id/edittxtContrasinal_Rexistro" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>